# ckanext-embedding

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
ckanext/embedding/: cli.py  helpers.py  plugin.py  views.py
ckanext/embedding/logic/: action.py  auth.py  schema.py  validators.py
ckanext/embedding/tests/: test_helpers.py  test_views.py
ckanext/embedding/tests/logic/: test_action.py  test_auth.py  test_validators.py
