[project]
name = "ckanext-embedding"
version = "0.0.1"
description = "CKAN vector embbeding for RAG"
readme = "README.md"
authors = [
    {name = "gisman", email = "gisman@gmail.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "search", "index", "vector", "embedding", "RAG", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/gisman/ckanext-embedding"

[project.entry-points."ckan.plugins"]
embedding = "ckanext.embedding.plugin:EmbeddingPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
